--- a/index.html
+++ b/index.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2000s Hit Music Trivia Game</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>Trivia Game Code</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 </head>
 <body>
-    <body background="https://i.ticketweb.com/i/00/07/55/96/99_Edp.jpg?v=11">
-        <div id="header">
-        </div>
-        <header>2000s Hit Music Trivia Game!</header>
-        </div>
-        <br>
-        <div class="game">
-            <div class="start-page">
-                <div class="section">
-                    <div id="startButton">
-                        <p><img src="assets/images/giphy.gif" width="600px"></p>
-                        <p>
-                            <h3>Oooopps.....I did it again. Feels like the 00s are making a comeback! Test your knowledge
-                                and see how many questions you can answer in 60 seconds.</h3>
-                        </p>
-                        <button type="button" id="startButton">Start</button>
-                    </div>
+    <div class="container">
+        <div class="main">
+            <div class="row start-page">
+                <div class="row img-initial col-sm-12">
+                    <img src="assets/images/giphy.gif" height="400px" width="900px">
+                    <h3>Ooops....I did it again. Take the challenge and see if you know your 2000s trivia!</h3>
                 </div>
-                <div class="container">
-                    <div id="timer">
-                        <div id="questionsArea">
-                            <div id="form">
-                                    <button type="button" id="doneButton">Done</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row">
+                    <div class="start-btn">Start</div>
                 </div>
             </div>
-            <div class="hidden" id="finalPage">
-                <h2>Here are your scores:</h2>
-                <p id="rightAnswers"></p>
-                <p id="wrongAnswers"></p>
-                <p id="leftBlank"></p>
-            </div>
         </div>
+    </div>
+    <div class="row questions-page">
+        <div class='timer text-left col-sm-3'></div>
+        <div class="question col-sm-6"></div>
+        <div class='score text-right col-sm-3'>
+            <div class="right"></div>
+            <div class="wrong"></div>
         </div>
-        </div>
-        </div>
-    </body>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+    </div>
+    <div class="row answers"></div>
+    <div class="row reset-button"></div>
+    </div>
+    </div>
+
     <script src="assets/javascript/app.js"></script>
+</body>
+
 </html>
